--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -85,14 +85,285 @@
 
 <main>
 
+<h2 class="text-center">Ford Mustang</h2>
+<p class="text-center"><strong>El Ford Mustang, es el coche mas personalizable del mundo</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/Ford-Mustang 1.jpg" class="d-block w-100 galeria" alt="Ford-Mustang">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/ford-mustang 2.jpg" class="d-block w-100 galeria" alt="Ford Mustang 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/ford-mustang 3.jpg" class="d-block w-100 galeria" alt="Ford Mustang 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/lyxYlNwYaF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<h2 class="text-center">Jeep Wrangler</h2>
+<p class="text-center"> <strong>Es prácticamente imposible encontrar un Jeep Wrangler que no esté personalizado.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/jeep-wrangler 1.jpg" class="d-block w-100 galeria" alt="Jeep Wrangler">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/jeep-wrangler-tuning 2.jpg" class="d-block w-100 galeria" alt="Jeep Wrangler 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/jeep-wrangler 3.jpg" class="d-block w-100 galeria" alt="Jeep Wrangler 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/o8s6EIYweRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<h2 class="text-center">Nissan 200SX </h2>
+<p class="text-center">Al igual que sucede con el Wrangler, es difícil ver un Nissan Silvia que esté sin modificar.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/nissan-200sx 1.jpg" class="d-block w-100 galeria" alt="Nissan 200sx 1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Nissan-200SX 2.jpg" class="d-block w-100 galeria" alt="Nissan 200sx 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/nissan-200sx 3.jpg" class="d-block w-100 galeria" alt="Nissan 200sx 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/PBy9WumiU34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<h2 class="text-center">Honda Civic</h2>
+<p class="text-center">Existe un mercado de accesorios realmente gigantesco para el Honda Civic. </p>
 
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/honda-civic 1.jpg" class="d-block w-100 galeria" alt="Honda Civic 1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/honda-civic 2.jpg" class="d-block w-100 galeria" alt="Honda Civic 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/honda-civic 3.jpg" class="d-block w-100 galeria" alt="Honda Civic 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/WY4h2cN_I7g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<h2 class="text-center">Mazda MX-5 </h2>
+<p class="text-center">Hay infinidad de componentes disponibles para el roadster más vendido del mundo, el Mazda MX-5.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/mazda-mx-5- 1.jpg" class="d-block w-100 galeria" alt="Mazda mx 5- 1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Mazda-mx-5- 2.jpg" class="d-block w-100 galeria" alt="Mazda mx 5- 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Mazda-mx-5- 3.jpg" class="d-block w-100 galeria" alt="Mazda mx 5- 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XDkxrxJAe0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h2 class="text-center text-white">Subaru WRX STi </h2>
+<p class="text-center text-white">Es raro cruzarse con un Subaru WRX STI que no esté modificado, aunque sólo sea con una reprogramación de centralita.</p>
+
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/subaru wrx sti- 1.jpg" class="d-block w-100 galeria" alt="Subaru wrx sti -1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Subaru wrx sti- 2.jpg" class="d-block w-100 galeria" alt="Subaru wrx sti -2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Subaru wrx sti- 3.jpg" class="d-block w-100 galeria" alt="Subaru wrx sti -3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/xvfUFtn0KYA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h2 class="text-center text-white">Mitsubishi Lancer EVO </h2>
+<p class="text-center text-white">Como sucede con el STI, las diferentes generaciones del Mitsubishi Lancer EVO están entre las favoritas de los preparadores.</p>
+
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/mitsubishi-lancer-evo 1.jpg" class="d-block w-100 galeria" alt="Mitsubishi lancer evo 1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/mitsubishi lancer evo- 2.jpg" class="d-block w-100 galeria" alt="Mitsubishi lancer evo 2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/mitsubishi lancer evo- 3.jpg" class="d-block w-100 galeria" alt="Mitsubishi lancer evo 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/aNleQWHwF7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h2 class="text-center text-white">Toyota Supra </h2>
+<p class="text-center text-white">Sólo tienes que fijarte en los Toyota Supra que aparecen en la imagen y entenderás porqué está aquí.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/toyota-supra-1.jpg" class="d-block w-100 galeria" alt="Toyota supra -1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/Toyota supra-2.jpg" class="d-block w-100 galeria" alt="Toyota supra -2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/toyota-supra-3.jpg" class="d-block w-100 galeria" alt="Toyota supra -3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/fPZcUpF7R3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h2 class="text-center text-white">Subaru BRZ y Toyota GT86 </h2>
+<p class="text-center text-white">Tanto el Toyota GT86 como el Subaru BRZ llevan poco tiempo en el mercado, pero ya se han convertido en unos de los coches más personalizables.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/subaru-brz-toyota-gt86.jpg" class="d-block w-100 galeria" alt="subaru brz -1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/subaru brz-2.jpg" class="d-block w-100 galeria" alt="Subaru brz -2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/subaru brz -3.jpg" class="d-block w-100 galeria" alt="Subaru brz -3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/eMkAAIy8eFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<h2 class="text-center text-white">Seat León </h2>
+<p class="text-center text-white">Dentro de nuestras fronteras, el Seat León es uno de los modelos favoritos entre los amantes del tuning.</p>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/seat leon -1.jpg" class="d-block w-100 galeria" alt="Seat Leon -1">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/seat leon 2.jpg" class="d-block w-100 galeria" alt="Seat Leon -2">
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/seat leon 3.jpg" class="d-block w-100 galeria" alt="Seat Leon -3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="text-center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8X42qxzWCwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
   
 </main>
