--- a/Pages/modelos.html
+++ b/Pages/modelos.html
@@ -83,60 +83,70 @@
 
 <main>
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<h2>Categorías y estilos de tuning  </h2>
+
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/racing.jpg" class="card-img-top cartasVenta" alt="Estilo Racing">
+    <div class="card-body bg-primary">
+      <h5 class="card-title text-white">Estilo: Racing Tuning</h5>
+      <p class="card-text text-white">Es el estilo por el cual el mundo del tuning comenzo. Todo esto del estilo racing nacio en europa por las competencias. Primero, lo primero, no es un estilo, es un tipo de modificacion, ademas simplemente es la adaptacion, en muchos casos de la estetica racing (o sea de carrera), a coches de calle, dando lugar al estilo Street Raicing. Los jóvenes quedaron encantados con el mundo del rally de las excelentes preparaciones que tenían esos automóviles y empezaron a transportarlo a sus autos. Estos coches tienen una carrocería muy preparada, normalmente muchísimos kilos menos de los que el coche de serie tendría, la preparación del motor es excelentísima y suele ser usado en rallyes y demás competiciones.</p>
+      <p class="card-text"><small class="text-white"></small></p>
     </div>
   </div>
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/jdm-768x960.jpg" class="card-img-top cartasVenta" alt="Estilo Jdm">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title text-white">Estilo: JDM (Japan Domestic Market</h5>
+      <p class="card-text text-white">El auge del movimiento Import en USA hizo que a su vez corriera una tendencia de “copiar” los exclusivos vehículos japoneses que no fueron comercializados allí, o que si fueron comercializados no fueron los modelos mas potentes. Así el movimiento JDM trata de conseguir fuera de Japon vehiculos tanto de serie como preparados, a base de piezas importadas exclusivamente de alli (sobretodo de preparadores de marcas japonesas como: Mugen, Spoon, Nismo, RalliArt, etc), siempre configuraciones minimalistas donde la base radica en aumentar prestaciones y reducir el peso tanto como sea posible. Las principales bases de vehículos sobre las preparaciones estilo JDM suelen ser los Honda Integra y Civic; Toyota Levin, Supra y Trueno; Nissan S13, S14, R32, R33…</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>  
 
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/muscle-1024x576.jpg" class="card-img-top cartasVenta" alt="Estilo Muscle">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title text-white">Estilo: Muscle</h5>
+      <p class="card-text text-white">Este estilo se basa en modelos americanos diseñados en las decadas del 60 y 70 basicamente (los llamados Muscle Cars o American Muscle), aunque incluyen tambien algunos modelos de los 80s y versiones actuales de estilo retro. Los preferidos son los cupes de motores V8 muy potentes tales como el Dodge Charger, Plymouth Road-Runner, Pontiac GTO y los clásicos Ford Mustang y Chevrolet Camaro entre otros.
+
+        Se caracterizan por llevar pocas modificaciones en la carrocería. pero si mucho trabajo en el motor, tranmision y suspensión para mucha potencia y hacer un gran despliegue de “fuerza bruta” al acelerar.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/custom.jpg" class="card-img-top cartasVenta" alt="Estilo Custom">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title text-white">Estilo: Custom</h5>
+      <p class="card-text text-white">Tiene su origen en América donde nació de la rebeldía de los colectivos chicanos, latinos o hispanos. Se inspira en los coches fabricados después de la Segunda Guerra Mundial: carrocerías muy bajas y redondas, accesorios cromados y con un especial cuidado de los detalles. Los motivos de la decoración suelen ser calaveras, cartas o dados, mientras que las llantas cromadas son muy habituales y en el interior predominan las tapicerías de pieles de animales.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/hot-rod.jpg" class="card-img-top cartasVenta" alt="Estilo Hot Rod">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title text-white">Estilo: Hot Rod</h5>
+      <p class="card-text text-white">Son los coches que se han modificado para requisitos particulares para el funcionamiento, y/o el aspecto. El término llegó a ser popular durante y después de la Segunda Guerra Mundial, particularmente dentro de California, originalmente significando un viejo coche (lo más a menudo posible Ford, típicamente Modelo T, Modele A, o de 1932 a 1934 Ford modelo B o Ford V-8) los cuales habían sido modificados reduciendo el peso (que modifica a veces el cuerpo quitando techo, vano motor, topes, parabrisas y/o defensas), bajándolo, modificándose o sustituyendo motor para dar más potencia, y cambiar ruedas y neumáticos para mejorar tracción y dirección. Tales modificaciones eran consideradas también como mejora del aspecto; al coche también le fue dado a menudo un trabajo distintivo de pintura. El término pudo haberse originado de “roadster caliente”: “fue utilizado en los años 50 y los años 60 como término despectivo para cualquier coche que no cupiera en la corriente principal. Otras fuentes indican que el término fue derivado del reemplazo de bielas en los motores para permitir que se alcanzasen RPMs más altas sin problemas (y el consecuente aumento de temperatura del motor).[citación necesitada] Como hot rodding llegó a ser más popular en los años 50, cuando empezaron tiendas de componentes, revistas y asociaciones que abastecen a “rodders de la calle“. Hot Rodders incluyendo Wally Parks crearon la asociación nacional de Hot Rod “NHRA” (“National Hot Rod Asociation”)para traer la competición de las calles a las pistas. La publicación anual Reunión Hot Rod de California (“California Hot Rod Meeting”)y Reunión nacional de Hot Rod (“National Hot Rod Meeting”)se mantienen para honrar a pioneros en el deporte. Wally Parks crea el museo “NHRA Motorsports Museum”, que contiene las raíces del Hot Rodding. Popularmente hoy en día quienes poseen Hot Rods los mantienen limpios e intentan hacerlos sensibles. No se llama a los trabajadores según la idea original de barato, rápido y sin ratas sobre los volantes. Hay muchas revistas que ofrecen los auténticos Hot Rods, incluyendo el diario de Rodders. Las publicaciones comerciales incluyen “Hot Rod Magazine”, “Rodder Street”, y “Popular Hot Rodding”. Hay también demostraciones en televisión, por ejemplo “Mi coche clásico”, y “HP TV”(Horse Power TV). Los Hot Rods son parte de la cultura americana, aunque está creciendo con controversia dentro del sector del automóvil, una tendencia en aumento dentro de la adquisición y la modificación irreversible de vehículos históricos es el sobrevivir – algo muy raro por norma general – más que el concepto hot rodding tradicional del rescate y de la reconstrucción de piezas estropeadas de segunda mano.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 
 
 
-  <div class="card mb-3">
-    <img src="/Images/Subaru-Impreza.jpg" class="card-img-top cartasVenta" alt="subaru-impreza">
+  <div class="card mb-3 bg-primary">
+    <img src="/Images/lowriders.jpg" class="card-img-top cartasVenta" alt="Estilo Lowrider">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title text-white">Estilo: Lowrider</h5>
+      <p class="card-text text-white">Una de las tendencias más importantes son las preparaciones low rider, estilo que apareció en los Estados Unidos durante los años cincuenta y que continúa teniendo muchos seguidores.
+
+        Este estilo se ha desarrollado sobre todo entre la comunidad chicana y mediante él intentan demostrar el orgullo étnico y la reafirmación de pertenencia a una determinada pandilla.
+        
+        El low rider se reconoce fácilmente por el uso de carrocerías muy bajas que permiten una conducción muy lenta del coche (el denominado arte bulevar) o bien la posibilidad de realizar saltos con el coche. Para ello se utiliza la suspensión hidráulica, más rápida que la neumática y que posibilita que el coche suba y baje bruscamente mientras está en movimiento. Así, los tradicionales muelles de suspensión se sustituyen por unos balones de aire que se inflan mediante un compresor y pueden ser controlados posteriormente a través de un mando.
+        
+        Otro de los rasgos distintivos del low rider son las llantas de radios, normalmente plateadas o doradas. En cuanto al color del vehículo, se utilizan los tonos crema y dorados, combinados con los caramelo (candy) y anaranjados y que pueden complementarse con motivos culturales, religiosos o de fantasía.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 
