--- a/Pages/repuestos.html
+++ b/Pages/repuestos.html
@@ -85,8 +85,59 @@
       <main>
 
 
-
-
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100 bg-info">
+              <img src="/Images/juego-de-4-tapa-y-cubre-valvula-cromado-de-rueda-auto-moto-6048-mla4552627767_062013-f.jpg" class="card-img-top" alt="Tapa y cubre valvula">
+              <div class="card-body">
+                <h5 class="card-title text-white">Tapa Para Válvulas De Aire</h5>
+                <p class="card-text text-white">AR$ 150,00</p>
+                <button type="button" class="btn btn-link">Comprar</button>
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Cargando...
+                </button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 bg-info">
+              <img src="/Images/yoyi.jpg" class="card-img-top" alt="LLaveros Tuning">
+              <div class="card-body">
+                <h5 class="card-title text-white">Llaveros Tuning</h5>
+                <p class="card-text text-white">AR$ 500,00</p>
+                <button type="button" class="btn btn-link">Comprar</button>
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Cargando...
+                </button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 bg-info">
+              <img src="/Images/Led de posicion.jpg" class="card-img-top" alt="Led de posicion">
+              <div class="card-body">
+                <h5 class="card-title text-white">Led De Posición</h5>
+                <p class="card-text text-white">AR$ 30,00</p>
+                <button type="button" class="btn btn-link">Comprar</button>
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Cargando...
+                </button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 
