--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -83,6 +83,74 @@
       </header>
 
 
+
+
+<main>
+
+
+
+
+  <form class="row g-3">
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail4">
+    </div>
+    <div class="col-md-6">
+      <label for="inputPassword4" class="form-label">Contraseña</label>
+      <input type="password" class="form-control" id="inputPassword4">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">Dirección</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="Virreyes 1234">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress2" class="form-label text-white">Dirección 2</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Departamento, Estudio, o Piso">
+    </div>
+    <div class="col-md-6">
+      <label for="inputCity" class="form-label text-white">Ciudad</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="col-md-4">
+      <label for="inputState" class="form-label text-white">Estado</label>
+      <select id="inputState" class="form-select">
+        <option selected>Elegir...</option>
+        <option>San Fernado</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <label for="inputZip" class="form-label text-white">Codigo Postal</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+    <div class="col-12">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <label class="form-check-label text-white" for="gridCheck">
+          Recuerdame
+        </label>
+      </div>
+    </div>
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Iniciar Sesion</button>
+    </div>
+  </form>
+<br>
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="Deje Su Comentario Aqui" id="floatingTextarea"></textarea>
+    <label for="floatingTextarea">Deje Su Consulta</label>
+    <button type="submit" class="btn btn-info">Enviar</button>
+  </div>
+
+
+
+
+</main>
+
+
+
+
+
+
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
